# master-experiment-old

./: .gitignore  .gitmodules  README.md  UploadVictims.py  human.yaml  humanOLD.yaml  human_lying.yaml  init-env.bash  multirobot.launch  multirobot_audio.launch  multirobot_visual.launch  robot.yaml  script.sh  start.sh  subwalls_to_borders.py  update-stations.sh  walls.yaml  world_human_extractor.py
src/audio_detection/: CMakeLists.txt  package.xml  setup.py
src/audio_detection/src/audio_detection/: audio_detection_new.py
src/audio_raw_saver/: CMakeLists.txt  package.xml  setup.py
src/audio_raw_saver/src/audio_raw_saver/: saveAudioRaw.py
src/audio_trigger_node/: CMakeLists.txt  package.xml  setup.py
src/audio_trigger_node/launch/: location_test.yaml  premade_query.yaml  runAudioPipeline.launch
src/audio_trigger_node/msg/: Trigger.msg
src/audio_trigger_node/src/audio_trigger_node/: audio_trigger.py  odom_emulator.py
src/darknet_ros/darknet_ros/: CMakeLists.txt
src/darknet_ros/darknet_ros/config/: ros.yaml
src/darknet_ros/darknet_ros/include/darknet_ros/: YoloObjectDetector.hpp
src/darknet_ros/darknet_ros/launch/: darknet-bot-1-station-1.launch  darknet-bot-2-station-3.launch  darknet-bot-3-station-3.launch  darknet-bot-4-station-4.launch  darknet-local.launch  multirobot.launch
src/darknet_ros/darknet_ros/src/: YoloObjectDetector.cpp
src/detection_calculation/: CMakeLists.txt  package.xml  setup.py
src/detection_calculation/launch/: fake_detection.launch
src/detection_calculation/src/detection_calculation_node/: detection_calculation.py  human_finder.py  human_rtree.py  subwalls._to_borders.py  subwalls_to_borders.py  util.py  wall_rtree.py
src/detection_logger/: CMakeLists.txt  package.xml
src/detection_logger/include/: audio_detection_data.h  audio_logger.h  detection_logger.h  socketio_audio_logger.h  socketio_visual_logger.h  visual_detection_data.h
src/detection_logger/src/: audio_logger.cc  socketio_audio_logger.cc  socketio_visual_logger.cc  visual_logger.cc  visual_logger_node.cc
src/detection_loggerOLD/: CMakeLists.txt  package.xml
src/detection_loggerOLD/include/: visual_detection_data.h  visual_logger.h
src/detection_loggerOLD/src/: audio_logger_node.cc  detection_logger.cc  socketio_audio_logger.cc  visual_logger_node.cc
src/detection_msgs/: CMakeLists.txt  package.xml
src/detection_msgs/msg/: AudioDetection.msg  AudioFileReady.msg  BoundingBox.msg  CompiledFakeMessage.msg  CompiledMessage.msg  DetectionId.msg  DetectionIdImage.msg  DetectionMatch.msg  DetectionPointCloud.msg  Human.msg  HumanLying.msg  HumanSeen.msg  ImageBoundingBox.msg  PointCloudImage.msg  ProcessedVisualDetection.msg  PseudoOdometry.msg  Rect.msg
src/image_draw/: CMakeLists.txt  package.xml
src/image_draw/include/: image_bounding_box_merger.h  visual_detection_tracker.h
src/image_draw/src/: image_bounding_box_merger.cc  image_listener.cpp  visual_detection_tracker.cc
src/multipurpose_image_draw/: CMakeLists.txt  package.xml
src/multipurpose_image_draw/include/: image_bounding_box_merger.h
src/multipurpose_image_draw/src/: image_bounding_box_merger.cc  image_listener.cpp
src/multirobot/: station1.machine  station4.machine
src/multirobot/launch/: move_base.launch  multirobot.launch  one_robot.launch  run_mission (copy).launch  run_mission.launch  run_mission_no_talkers.launch  turtlebot_map.launch
src/multirobot/launch/includes/: kobuki.launch.xml  kobuki2.launch.xml
src/multirobot/launch/missions/: multirobot_mission2.launch  multirobot_mission5.launch
src/multirobot/map/: try_out.yaml
src/multirobot/multirobot/: init-env.bash
src/multirobot/multirobot/config_v2/: costmap_common.yaml  planner.yaml
src/multirobot/multirobot/launch/: gazebo_multirobot.launch  gmapping.launch  one_robot_v1.launch  run_mission.launch  run_mission.launch.testing  run_mission_no_talkers.launch  test.launch  view_navigation.launch
src/multirobot/multirobot/launch/includes/: amcl.launch.xml
src/multirobot/multirobot/launch/missions/: multirobot_mission1.launch  multirobot_mission3.launch  multirobot_mission4.launch
src/multirobot/multirobot/rviz/: navigation_4bot.rviz  navigation_bot1.rviz  navigation_bot2.rviz
src/multirobot/multirobot/worlds/: jacaranda_v4.world  jacaranda_v4_v2.world  world_v2
src/multirobot/worlds/: jacaranda_v4_v2_humans.world  jacaranda_v4_v3.world  world_v3
src/pseudo_tracker/: CMakeLists.txt  package.xml  setup.py
src/pseudo_tracker/src/pseudo_tracker_node/: pseudo_tracker.py
src/tracker/: CMakeLists.txt  package.xml
src/tracker/include/: detection_aggregator.h  detection_comparer.h  detection_frame_id.h  detection_similarity_association.h  detection_tracker.h  face_classifier_manager.h  face_identifier_model.h
src/tracker/launch/: tracker-multirobot.launch  tracker.launch
src/tracker/src/: detection_comparer.cc  detection_comparer_node.cc  detection_frame_id.cc  detection_tracker.cc  face_classifier_manager.cc  face_identifier_model.cc  image_tracker.cpp
src/waypoints/_backup/: talker2_backup.py  talker3_mission1_backup.py  talker4_backup.py
src/waypoints/src/: .talker3_mission1.py.swp  .toggle_check.py.swp  helpers.py  listener.py  points.txt  talker1_mission1.py  talker1_mission1.py.save  talker1_mission2.py  talker1_mission3.py  talker1_mission4.py  talker1_mission5.py  talker2Test.py  talker2_mission1.py  talker2_mission2.py  talker2_mission3.py  talker2_mission4.py  talker2_mission5.py  talker3_mission1.py  talker3_mission2.py  talker3_mission3.py  talker3_mission4.py  talker3_mission5.py  talker4_mission1.py  talker4_mission2.py  talker4_mission3.py  talker4_mission4.py  talker4_mission5.py  toggle_check.py
