<?xml version="1.0"?>
<package format="2">
  <name>detection_calculation</name>
  <version>0.0.0</version>
  <description>The detection_calculation package</description>
  <maintainer email="aren.mboghozian@gmail.com">serl</maintainer>
  <license>TODO</license>

  <build_depend>message_generation</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
  </export>

</package>
