<?xml version="1.0"?>
<package>
  <name>detection_loggerOLD</name>
  <version>0.0.0</version>
  <description>The detection_logger package</description>
  <maintainer email="kennyhansondev@gmail.com">Kenny Hanson</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>detection_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>detection_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
