<?xml version="1.0"?>
<package>
  <name>detection_msgs</name>
  <version>0.0.0</version>
  <description>The detection_msgs package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="kenny@todo.todo">kenny</maintainer>

  <license>TODO</license>

  <build_depend>message_generation</build_depend>
  <build_depend>darknet_ros_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  
  <buildtool_depend>catkin</buildtool_depend>


  <export>

  </export>
</package>
