<?xml version="1.0"?>
<package>
  <name>image_draw</name>
  <version>0.0.0</version>
  <description>The detection_logger package</description>
  <maintainer email="logan@todo.todo">logan</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>detection_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>darknet_ros_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>detection_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>darknet_ros_msgs</run_depend>





  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
