<?xml version="1.0"?>
<package format="2">
  <name>multipurpose_image_draw</name>
  <version>0.0.0</version>
  <description>The multipurpose_image_draw package</description>

  <maintainer email="serl@todo.todo">serl</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>

  </export>
</package>
