<?xml version="1.0"?>
<package format="2">
  <name>pseudo_tracker</name>
  <version>0.0.0</version>
  <description>The pseudo_tracker package</description>

  <maintainer email="aren.mboghozian@gmail.com">serl</maintainer>
  <license>TODO</license>

  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <build_depend>message_generation</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>detection_msgs</depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
